--- a/requirements.txt
+++ b/requirements.txt
@@ -18,13 +18,14 @@ discord-webhook
 dnspython==2.7.0
 email_validator==2.2.0
 emoji==2.14.0
-eventlet==0.38.0
 exceptiongroup==1.2.2
 Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Limiter==3.8.0
 Flask-SocketIO==5.4.1
 frozenlist==1.5.0
+gevent==24.11.1
+gevent-websocket
 grapheme==0.6.0
 greenlet==3.1.1
 h11==0.14.0
